# monkey-miner-rs

./: Cargo.toml  Makefile  README.md
assets/icons/: monkey-miner.icns
scripts/: build-release.ps1  build-release.sh  build-windows.sh
src/: main.rs  maze.rs
