[package]
name = "monkey-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_sprite3d = "8.0.0"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", features = ["relax-sign-encoding"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
